input event added to convert degree

--- a/02-typescript/01-converter/src/index.html
+++ b/02-typescript/01-converter/src/index.html
@@ -16,13 +16,14 @@
       <div style="line-height: 1.2;
       text-align: left;">Temperature</div>
       <div>
-          <div><input type="text"> <span>Fahrenheit</span></div>
+          <div><input type="number" id="F"> <span>Fahrenheit</span></div>
           =
-          <div><input type="text"> <span>Celsius</span></div>
+          <div><input type="number" id="C"> <span>Celsius</span></div>
       </div>
       <div>
           <p>Formula</p><span>(32°F − 32) × 5/9 = 0°C</span>
       </div>
     </div>
+    <script src="../dist/bundle.js"></script>
   </body>
 </html>
