NaN issue solved, naming convention added

--- a/02-typescript/01-converter/index.html
+++ b/02-typescript/01-converter/index.html
@@ -16,12 +16,12 @@
       <div style="line-height: 1.2;
       text-align: left;">Temperature</div>
       <div>
-          <div><input type="number" id="F"> <span>Fahrenheit</span></div>
+          <div><input type="number" id="fahrenheitInput"> <span>Fahrenheit</span></div>
           =
-          <div><input type="number" id="C"> <span>Celsius</span></div>
+          <div><input type="number" id="celsiusInput"> <span>Celsius</span></div>
       </div>
       <div>
-          <p>Formula</p><span>( <span id="fN"></span>°F − 32) × 5/9 = <span id="cN"></span>°C</span>
+          <p>Formula</p><span>( <span id="fahrenheitResult"></span>°F − 32) × 5/9 = <span id="celsiusResult"></span>°C</span>
       </div>
     </div>
     <script src="dist/bundle.js"></script>
