--- a/02-typescript/02-to-do-list/index.html
+++ b/02-typescript/02-to-do-list/index.html
@@ -6,6 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>To Do List</title>
 </head>
+<style>
+  .ulStyle {
+    list-style-type: none;
+    border: 2px solid black;
+    border-radius: .5rem;
+  }
+  .listStyle {
+    font-size: 1.5rem;
+    border-bottom: 1px solid gray;
+  }
+  .pStyle {
+    display: inline-block;
+    margin: 2rem;
+    width: 10rem;
+  }
+</style>
 <body>
   <div id="app"></div>
   <script src="./dist/bundle.js"></script>
